<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <NumberPicker
        android:id="@+id/yearPicker"
        android:layout_width="411dp"
        android:layout_height="163dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/calculateDaysButton"
        android:layout_width="171dp"
        android:layout_height="44dp"
        android:layout_marginTop="265dp"
        android:text="@string/calculateDaysButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sundaysButton"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/sundaysButton"
        android:layout_width="171dp"
        android:layout_height="44dp"
        android:layout_marginTop="265dp"
        android:text="@string/sundaysButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calculateDaysButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/ashText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:text="@string/ashText"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/easterText"
        app:layout_constraintEnd_toStartOf="@+id/ashDateText"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker" />

    <TextView
        android:id="@+id/easterText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:text="@string/easterText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/corpusCristiText"
        app:layout_constraintEnd_toStartOf="@+id/easterDateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ashText" />

    <TextView
        android:id="@+id/corpusCristiText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:text="@string/corpusCristiText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/adventText"
        app:layout_constraintEnd_toStartOf="@+id/corpusDateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easterText" />

    <TextView
        android:id="@+id/adventText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:text="@string/adventText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sundaysButton"
        app:layout_constraintEnd_toStartOf="@+id/adventDateText"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpusCristiText" />

    <TextView
        android:id="@+id/ashDateText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toTopOf="@+id/easterDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker" />

    <TextView
        android:id="@+id/easterDateText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toTopOf="@+id/corpusDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ashDateText" />

    <TextView
        android:id="@+id/corpusDateText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toTopOf="@+id/adventDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easterDateText" />

    <TextView
        android:id="@+id/adventDateText"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toTopOf="@+id/calculateDaysButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpusDateText" />

</androidx.constraintlayout.widget.ConstraintLayout>